--- a/.dev/sass/compat/gutenberg.scss
+++ b/.dev/sass/compat/gutenberg.scss
@@ -1,108 +1,52 @@
 /*--------------------------------------------------------------
 >>> Gutenberg:
 --------------------------------------------------------------*/
-.wp-block-cover-image {
-	margin-bottom: 1.5rem;
-}
-
-.wp-block-cover-image.alignfull,
-.wp-block-image.alignfull,
-.wp-block-cover-text.alignfull,
-.wp-block-gallery.alignfull,
-.wp-block-text-columns.alignfull {
-	margin-left: -28.6%;
-	width: 157.2%;
-
-	figcaption {
-		padding: 0 3.375em;
-	}
-
-	@media #{$medium-only} {
-		margin-left: -4.4375rem;
-		width: calc( 100% + 8.875rem );
-
-		figcaption {
-			padding: 0 2.375em;
-		}
-	}
-
-	@media #{$small-only} {
-		margin-left: -2.4375rem;
-		width: calc( 100% + 4.875rem );
-
-		figcaption {
-			padding: 0 1em;
-		}
-	}
-}
-
-.wp-block-cover-image.alignfull,
-.wp-block-image.alignfull,
-.wp-block-cover-image.alignwide,
-.wp-block-image.alignwide {
-	img {
-		width: 100%;
-	}
-}
-
-.wp-block-cover-image.alignwide,
-.wp-block-image.alignwide,
-.wp-block-cover-text.alignwide,
-.wp-block-image.alignwide,
-.wp-block-gallery.alignwide,
-.wp-block-text-columns.alignwide {
-	margin-left: -4.4375rem;
-	width: calc( 100% + 8.875rem );
-
-	@media #{$medium-only} {
-		margin-left: -1.75rem;
-		width: calc( 100% + 3.5rem );
-	}
-
-	@media #{$small-only} {
-		margin-left: -0.75rem;
-		width: calc( 100% + 1.5rem );
-	}
-}
-
-.wp-block-image,
-.wp-block-gallery,
-.wp-block-video,
-.wp-block-quote,
-.wp-block-text-columns,
-.entry-content ul,
-.entry-content ol,
-.wp-block-cover-text {
-	&.alignleft {
-		margin: 0 1em 0.5em 0;
-	}
-
-	&.alignright {
-		margin: 0 0 0.5em 1em;
-	}
-
-	&.alignleft,
-	&.alignright {
-		max-width: 40%;
-		@media #{$small-only} {
-			max-width: 100%;
-			margin-left: 0;
-			margin-right: 0;
-		}
-	}
-}
-
 body.customize-support {
-	overflow-x: hidden;
+	.alignfull {
+		width: 100vw;
+		position: relative;
+		left: 50%;
+		right: 50%;
+		margin-left: -50vw;
+		margin-right: -50vw;
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6,
-	.site-title,
-	.page-title {
-		clear: none;
+		img {
+			width: 100%;
+		}
+	}
+
+	.alignwide {
+		margin-left: -1.6875em;
+		margin-right: -1.6875em;
+		width: calc( 100% + 3.375em );
+	}
+
+	.wp-block-image,
+	.wp-block-gallery,
+	.wp-block-video,
+	.wp-block-quote,
+	.wp-block-text-columns,
+	.entry-content ul,
+	.entry-content ol,
+	.wp-block-cover-text {
+		&.alignleft {
+			margin: 0 1em 0.5em 0;
+		}
+
+		&.alignright {
+			margin: 0 0 0.5em 1em;
+		}
+
+		@media #{$small-only} {
+			&.alignleft,
+			&.alignright {
+				width: 100%;
+
+				img {
+					max-width: 100%;
+					width: 100%;
+				}
+			}
+		}
 	}
 }
