--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4503,3 +4503,77 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
     padding-left: 0 !important; }
   .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
     width: 100%; } }
+
+/*--------------------------------------------------------------
+>>> Gutenberg:
+--------------------------------------------------------------*/
+body.customize-support .alignfull {
+  width: 100vw;
+  position: relative;
+  right: 50%;
+  left: 50%;
+  margin-right: -50vw;
+  margin-left: -50vw; }
+  body.customize-support .alignfull img {
+    width: 100%; }
+
+body.customize-support .alignwide {
+  margin-right: -1.6875em;
+  margin-left: -1.6875em;
+  width: -webkit-calc( 100% + 3.375em);
+  width: calc( 100% + 3.375em); }
+
+body.customize-support .wp-block-image.alignleft,
+body.customize-support .wp-block-gallery.alignleft,
+body.customize-support .wp-block-video.alignleft,
+body.customize-support .wp-block-quote.alignleft,
+body.customize-support .wp-block-text-columns.alignleft,
+body.customize-support .entry-content ul.alignleft,
+body.customize-support .entry-content ol.alignleft,
+body.customize-support .wp-block-cover-text.alignleft {
+  margin: 0 0 0.5em 1em; }
+
+body.customize-support .wp-block-image.alignright,
+body.customize-support .wp-block-gallery.alignright,
+body.customize-support .wp-block-video.alignright,
+body.customize-support .wp-block-quote.alignright,
+body.customize-support .wp-block-text-columns.alignright,
+body.customize-support .entry-content ul.alignright,
+body.customize-support .entry-content ol.alignright,
+body.customize-support .wp-block-cover-text.alignright {
+  margin: 0 1em 0.5em 0; }
+
+@media only screen and (max-width: 40em) {
+  body.customize-support .wp-block-image.alignleft, body.customize-support .wp-block-image.alignright,
+  body.customize-support .wp-block-gallery.alignleft,
+  body.customize-support .wp-block-gallery.alignright,
+  body.customize-support .wp-block-video.alignleft,
+  body.customize-support .wp-block-video.alignright,
+  body.customize-support .wp-block-quote.alignleft,
+  body.customize-support .wp-block-quote.alignright,
+  body.customize-support .wp-block-text-columns.alignleft,
+  body.customize-support .wp-block-text-columns.alignright,
+  body.customize-support .entry-content ul.alignleft,
+  body.customize-support .entry-content ul.alignright,
+  body.customize-support .entry-content ol.alignleft,
+  body.customize-support .entry-content ol.alignright,
+  body.customize-support .wp-block-cover-text.alignleft,
+  body.customize-support .wp-block-cover-text.alignright {
+    width: 100%; }
+    body.customize-support .wp-block-image.alignleft img, body.customize-support .wp-block-image.alignright img,
+    body.customize-support .wp-block-gallery.alignleft img,
+    body.customize-support .wp-block-gallery.alignright img,
+    body.customize-support .wp-block-video.alignleft img,
+    body.customize-support .wp-block-video.alignright img,
+    body.customize-support .wp-block-quote.alignleft img,
+    body.customize-support .wp-block-quote.alignright img,
+    body.customize-support .wp-block-text-columns.alignleft img,
+    body.customize-support .wp-block-text-columns.alignright img,
+    body.customize-support .entry-content ul.alignleft img,
+    body.customize-support .entry-content ul.alignright img,
+    body.customize-support .entry-content ol.alignleft img,
+    body.customize-support .entry-content ol.alignright img,
+    body.customize-support .wp-block-cover-text.alignleft img,
+    body.customize-support .wp-block-cover-text.alignright img {
+      max-width: 100%;
+      width: 100%; } }
