--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4507,17 +4507,17 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
 /*--------------------------------------------------------------
 >>> Gutenberg:
 --------------------------------------------------------------*/
-.alignfull {
+[class^="wp-block-"].alignfull {
   width: 100vw;
   position: relative;
   right: 50%;
   left: 50%;
   margin-right: -50vw;
   margin-left: -50vw; }
-  .alignfull img {
+  [class^="wp-block-"].alignfull img {
     width: 100%; }
 
-.alignwide {
+[class^="wp-block-"].alignwide {
   margin-right: -1.6875em;
   margin-left: -1.6875em;
   width: -webkit-calc( 100% + 3.375em);
