--- a/style-rtl.css
+++ b/style-rtl.css
@@ -299,7 +299,7 @@ img {
   width: 100%;
   float: right; }
 
-[class*="column"] + [class*="column"]:last-child {
+[class*="column"] + [class*="column"]:last-child:not(.wp-block-columns) {
   float: left; }
 
 [class*="column"] + [class*="column"].end {
