--- a/.dev/sass/compat/gutenberg.scss
+++ b/.dev/sass/compat/gutenberg.scss
@@ -69,10 +69,10 @@
 
 .wp-block-column {
 	flex: 1;
-	margin: 0 20px;
+	margin: 0 5px;
 }
 
-@media (max-width: 764px) {
+@media #{$medium-only} {
 	.wp-block-columns.has-3-columns {
 		flex-flow: row wrap;
 	}
@@ -82,13 +82,14 @@
 	}
 }
 
-@media (max-width: 478px) {
-	.wp-block-columns.has-3-columns {
-		display: block;
-	}
-
-	.wp-block-column {
-		margin: 20px 0;
+@media #{$small-only} {
+	.wp-block-columns {
+		&.has-1-columns,
+		&.has-2-columns,
+		&.has-3-columns,
+		&.has-4-columns {
+			display: block;
+		}
 	}
 }
 
