--- a/editor-style.css
+++ b/editor-style.css
@@ -206,7 +206,7 @@ img {
   width: 100%;
   float: left; }
 
-[class*="column"] + [class*="column"]:last-child:not(.wp-block-columns) {
+[class*="column"] + [class*="column"]:last-child:not(.wp-block-column):not(.wp-block-columns) {
   float: right; }
 
 [class*="column"] + [class*="column"].end {
